The WebKit2 GNUmakefile.am is out of date from the trunk. Some of the file path (given in makefile) are changed, while some of the files have been removed. The makefile needs to be updated for proper source file list as per latest trunk
Tagging it as GTK port bug
Created attachment 78230 [details] GTK Stubbed Implementations on latest revision
Created attachment 78231 [details] Makefile changes and signature changes on latest revision
Comment on attachment 78231 [details] Makefile changes and signature changes on latest revision Hopefully the commit-queue does the right thing with two patches here. :)
The commit-queue encountered the following flaky tests while processing attachment 78230 [details]: http/tests/xmlhttprequest/remember-bad-password.html bug 51733 (author: ap@webkit.org) The commit-queue is continuing to process your patch.
Comment on attachment 78230 [details] GTK Stubbed Implementations on latest revision Clearing flags on attachment: 78230 Committed r75272: <http://trac.webkit.org/changeset/75272>
Comment on attachment 78231 [details] Makefile changes and signature changes on latest revision Rejecting attachment 78231 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-sf-cq', 'land-attachment', '--force-clean', '--ignore-builders', '--non-interactive', '--parent-command=commit-queue', 78231]" exit_code: 1 Last 500 characters of output: le "/Projects/CommitQueue/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 64, in _run step(tool, options).run(state) File "/Projects/CommitQueue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 57, in run if self._has_valid_reviewer(changelog_entry): File "/Projects/CommitQueue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 42, in _has_valid_reviewer if changelog_entry.reviewer(): AttributeError: 'NoneType' object has no attribute 'reviewer' Full output: http://queues.webkit.org/results/7451037
Committed r75345: <http://trac.webkit.org/changeset/75345>